[gd_scene load_steps=2 format=3 uid="uid://cewu6y37ga81"]

[ext_resource type="Script" path="res://control.gd" id="1_o24mv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1149.0
offset_bottom = 646.0
script = ExtResource("1_o24mv")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 383.0
offset_top = 24.0
offset_right = 667.0
offset_bottom = 55.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 403.0
offset_top = 532.0
offset_right = 655.0
offset_bottom = 555.0

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 172.0
offset_right = 690.0
offset_bottom = 274.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 490.0
offset_top = 332.0
offset_right = 589.0
offset_bottom = 366.0
text = "Send Text"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 30.0
offset_right = 156.0
offset_bottom = 68.0
item_count = 4
popup/item_0/text = "Kitten"
popup/item_0/id = 0
popup/item_1/text = "Puppy"
popup/item_1/id = 1
popup/item_2/text = "Chick"
popup/item_2/id = 2
popup/item_3/text = "Tadpole"
popup/item_3/id = 3

[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
